# osi

./: .gitignore  Cargo.toml  build.rs
resources/: resources.gresource.xml  window.ui
src/: main.rs  message.rs  recorder.rs  style.css  transcriber.rs  utils.rs
src/audio/: mod.rs
src/components/: line.rs
src/network/: mod.rs
src/window/: imp.rs  mod.rs
