[package]
name = "osi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
cpal = "0.15.3"
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_6"] }
hound = "3.5.1"
regex = "1.10.3"
reqwest = { version = "0.12.0", features = ["json", "multipart", "blocking"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
whisper-rs = "0.10.0"
